app/src/main/java/com/example/webtonative/core/domain/util/error/Error.kt
package com.example.webtonative.core.domain.util.error

sealed interface Error